--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,16 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form class="form-inline" action="/urls" method="POST">
+        <label for="username"><b>Log In:</b></label>
+        <input
+          class="form-control"
+          type="text"
+          name="username"
+          placeholder: username
+          style="width: 300px; margin: 1em"
+        />
+        <button type="submit" class="btn btn-primary">Log In</button>
+    </form>
   </nav>
 </header>
