--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,29 +16,9 @@
     />
     <title>TinyApp</title>
   </head>
-  <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
-      <a class="navbar-brand" href="/urls">TinyApp</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/urls">My URLs</a>
-          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        </div>
-      </div>
-    </nav>
-  </header>
+
   <body>
+    <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -46,6 +26,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -53,7 +35,16 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <td><form method="POST" action="/urls/<%= id %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
+              <td>
+                <form method="GET" action="/urls/<%= id %>">
+                <button type="submit" style="background-color:white; border-color:rgb(0, 64, 255); color:rgb(0, 64, 255)" class="btn btn-primary">Edit</button>
+                  </form>
+              </td>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                <button type="submit" style="background-color:white; border-color:red; color:red" class="btn btn-primary">Delete</button>
+              </form>
+              </td>
             </tr>
           <% } %>
         </tbody>
