--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <form class="form-inline" action="/urls" method="POST">
+    <form class="form-inline" action="/urls/login" method="POST">
         <label for="username"><b>Log In:</b></label>
         <input
           class="form-control"
