--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,20 +16,26 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/register">Create Account</a>
       </div>
     </div>
-    <% if (username) { %>
+    <% if (user) { %>
       <form class="form-inline" action="/logout" method="POST">
-        <p>Logged in as <%= username %></p>
-        <button type="submit" class="btn btn-primary">Logout</button>
+        <p>Logged in as <%= users[randomID].email %></p>
+        <button type="submit" style="background-color:rgba(253, 253, 253, 0); border-color:rgb(255, 255, 255); color:rgb(243, 244, 247)" class="btn btn-primary">Logout</button>
       </form>
     <% } else { %>
+      <div>
+        <form action="/login" method="POST">
+          <button type="submit" style="background-color:rgba(253, 253, 253, 0); border-color:rgb(255, 255, 255); color:rgb(243, 244, 247)"class="btn btn-primary">Log In</button>
+        </form>
+      </div>
     <form class="form-inline" action="/login" method="POST">
-        <label for="username"><b>Log In:</b></label>
+        <label for="email"><b>Log In:</b></label>
         <input
           class="form-control"
           type="text"
-          name="username"
+          name=email
           style="width: 200px; margin: 0.5em"
         />
         <button type="submit" class="btn btn-primary">Log In</button>
