--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,25 +12,28 @@
   </head>
   <body>
     <%- include('partials/_header') %>
-    <div class="card text-center">
+    <div class = "card text-center">
       <div class="card-header"></div>
       <div class="card-body">
+          <% if (!user) { %>
+            <div class="alert alert-warning" role="alert">
+                This link is not associated with your account.
+                Please <a href="/login" class="alert-link">login</a> or <a href="/register" class="alert-link">register</a> to view your personal inventory of tiny URLs.
+            </div>
+          <% } else if (user.id !== urlUserID) { %>
+            <div class="alert alert-warning" role="alert">
+                This link is not associated with your account.
+            </div>
+          <% } %>
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
-          Short URL ID: <a href="/u/<%= tinyURL %>"><%= tinyURL %></a> 
-        </p>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>" target="_blank"><%= shortURL %></a></p>
       </div>
       <div class="card-footer text-muted">
         <h3>Edit</h3>
-        <form class="form-inline" action="/urls/<%= tinyURL %>" method="POST">
-          <label for="longURL">New URL:</label>
-          <input
-            class="form-control"
-            type="text"
-            name="longURL"
-            placeholder="http://"
-            style="width: 300px; margin: 1em"/>
-          <button type="submit" class="btn btn-primary">Submit</button>
+        <form action="/urls/<%= shortURL %>" method="POST">
+        <label for="newURL">New URL:</label>
+        <input type="text" name="newURL" placeholder="http://" style="width: 300px; margin: 1em">
+        <button type="submit" class="btn btn-primary">Update</button>
         </form>
       </div>
     </div>
