downloaded chai & mocha, created helper tests

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
         <tbody>
           <% if (!user) { %>
             <div class="alert alert-warning" role="alert">
-                Please <a href="/login" class="alert-link">login</a> or <a href="/register" class="alert-link">register</a> to view your personal inventory of tiny URLs.
+                Please <a href="/login" class="alert-link">login</a> or <a href="/register" class="alert-link">create an account</a> to view your personal inventory of tiny URLs.
             </div>
           <% } else { %>
           <% for(let url in urls) { %>
