--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,16 +18,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if(!user) { %>
-      <a class="nav-item nav-link" style="background-color:rgba(253, 253, 253, 0); border-color:rgb(255, 255, 255); color:rgba(243, 244, 247, 0.532)" href="/login">Log In</a>
-      <a class="nav-item nav-link" style="background-color:rgba(253, 253, 253, 0); border-color:rgb(255, 255, 255); color:rgb(243, 244, 247, 0.532)" href="/register">Create Account</a>    
-   
-   
-   <% } else {%> 
-    Logged in as <%= user.email %>!
-     <form class="nav-item nav-link"  action="/logout %>" method="POST">
-      <button type="submit" style="background-color:rgba(253, 253, 253, 0); border-color:rgb(0, 0, 0); color:rgb(5, 5, 6)" class="btn btn-primary">Logout</button>  
-     </form>
-     <% } %>
+    <% if (user) { %>
+      <form class="form-inline" action="/logout" method="POST" style="padding-top: 0px">
+        Logged in as <%= user.email %>!
+        <button type="submit" class="btn btn-outline-dark" style="margin-left: 1em">Logout</button>
+      </form>
+      <% } else { %>
+      <form class="form-inline" action="/login" method="GET">
+        <button type="submit" class="btn btn-outline-light" style="margin-right: 2em;">Login</button>
+      </form>
+      <form class="form-inline" action="/register" method="GET">
+        <button type="submit" class="btn btn-outline-light">Register</button>
+      </form>
+      <% } %>
   </nav>
 </header>
