--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -26,11 +26,11 @@
             </div>
           <% } %>
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>" target="_blank"><%= shortURL %></a></p>
+        <p class="card-text">Short URL: <a href="/u/<%= tinyURL %>" target="_blank"><%= tinyURL %></a></p>
       </div>
       <div class="card-footer text-muted">
         <h3>Edit</h3>
-        <form action="/urls/<%= shortURL %>" method="POST">
+        <form action="/urls/<%= tinyURL %>" method="POST">
         <label for="newURL">New URL:</label>
         <input type="text" name="newURL" placeholder="http://" style="width: 300px; margin: 1em">
         <button type="submit" class="btn btn-primary">Update</button>
